--- a/themes/opencps-ux-theme/docroot/css/.sass-cache/custom.css
+++ b/themes/opencps-ux-theme/docroot/css/.sass-cache/custom.css
@@ -5610,7 +5610,7 @@ body {
 
 /* Overwrite portlet alert  */
 .opencps-theme.ux .alert {
-  margin: 10px !important; }
+  margin: 10px 0 !important; }
 
 #navigation ul li.selected {
   background-color: #0074cd; }
@@ -5623,4 +5623,14 @@ body {
 
 .opencps-theme.ux .home_bg #column-1 .portlet-borderless-container {
   background: transparent !important; }
+
+.opencps-theme.ux .lfr-input-date.input100 input {
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -khtml-box-sizing: border-box;
+  box-sizing: border-box;
+  min-height: 30px;
+  max-width: 100% !important;
+  width: 100%; }
 
