--- a/portlets/opencps-portlet/docroot/css/.sass-cache/processmgt.css
+++ b/portlets/opencps-portlet/docroot/css/.sass-cache/processmgt.css
@@ -124,7 +124,7 @@
   background-color: transparent !important;
   color: white; }
 
-.searchcontainer-content .readonly td input {
+.searchcontainer-content .readonly td input[type="checkbox"] {
   display: none !important; }
 
 .signature-file-list {
