--- a/portlets/opencps-portlet/docroot/css/.sass-cache/main.css
+++ b/portlets/opencps-portlet/docroot/css/.sass-cache/main.css
@@ -53,3 +53,9 @@
 .required-highlight {
   background-color: red !important; }
 
+a.a-disabled {
+  pointer-events: none; }
+
+.ocps-disabled {
+  background-color: rgba(0, 144, 255, 0.54) !important; }
+
