--- a/themes/opencps-ux-theme/docroot/css/.sass-cache/main.css
+++ b/themes/opencps-ux-theme/docroot/css/.sass-cache/main.css
@@ -6726,7 +6726,8 @@ table.payment tr td:nth-last-of-type(-n+2):after {
 
 .payment-ld .content .box50 > div, .payment-ld .content .box100 > div {
   border-bottom: 1px solid #ccc;
-  padding: 15px 30px 5px; }
+  padding: 15px 30px 5px;
+  overflow: hidden; }
 
 .payment-ld .content .box50:nth-child(1) p span:first-child {
   font-family: 'Roboto-Bold';
@@ -8190,4 +8191,7 @@ body {
   min-height: 30px;
   max-width: 100% !important;
   width: 100%; }
+
+.red {
+  color: red; }
 
