--- a/themes/opencps-ux-theme/docroot/css/portlets/portlet_19_20_22.css
+++ b/themes/opencps-ux-theme/docroot/css/portlets/portlet_19_20_22.css
@@ -268,7 +268,7 @@ box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2); width: 370px; float: right; padding
 .payment-ld .content .box50 > div, .payment-ld .content .box100 > div {
     border-bottom: 1px solid #ccc;
     padding: 15px 30px 5px;
-    overflow: hidden;
+    box-sizing: border-box;
 }
 .payment-ld .content .box50:nth-child(1) p span:first-child {
     font-family: 'Roboto-Bold';
