--- a/themes/opencps-ux-theme/docroot/css/.sass-cache/custom.css
+++ b/themes/opencps-ux-theme/docroot/css/.sass-cache/custom.css
@@ -3094,7 +3094,7 @@
   text-transform: uppercase; }
 
 .fa-file-text-o::before {
-  content: ""; }
+  content: "?"; }
 
 .blue {
   color: #0690fb !important; }
@@ -4170,7 +4170,6 @@ table.payment tr td:nth-last-of-type(-n+2):after {
 .payment-ld .content .box50 > div, .payment-ld .content .box100 > div {
   border-bottom: 1px solid #ccc;
   padding: 15px 30px 5px;
-  overflow: hidden;
   box-sizing: border-box; }
 
 .payment-ld .content .box50:nth-child(1) p span:first-child {
@@ -4432,7 +4431,7 @@ div.payment-ld:nth-child(2) {
   text-transform: uppercase; }
 
 .fa-file-text-o::before {
-  content: ""; }
+  content: "?"; }
 
 .blue {
   color: #0690fb !important; }
