--- a/themes/opencps-ux-theme/docroot/css/portlets/.sass-cache/portlet_10.css
+++ b/themes/opencps-ux-theme/docroot/css/portlets/.sass-cache/portlet_10.css
@@ -13,7 +13,7 @@
   text-transform: uppercase; }
 
 .fa-file-text-o::before {
-  content: ""; }
+  content: "?"; }
 
 .blue {
   color: #0690fb !important; }
